# moann

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: config.rs  constants.rs  errors.rs  main.rs  play_sound.rs  sounds.rs  utils.rs
src/commands/: start.rs
