[package]
name = "sound"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = "0.20.1"
console = "0.15.8"
rdev = "0.5.3"
clap = { version = "4.5.1", features = ["derive"] }
indicatif = "0.17"
dialoguer = "0.11.0"
dirs = "4.0"
term_ansi = "0.2.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ureq = "2.10.1"
zip = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"